add java11 profile