@@ -1122,7 +1122,7 @@
         </executions>
         <configuration>
           <includes>
-          	<include>com.hack23.*</include>          	
+            <include>com.hack23.*</include>
           </includes>
           <excludes>
             <exclude>module-info.*</exclude>
@@ -1135,7 +1135,8 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <inherited>true</inherited>
         <configuration>
-          <argLine>@{surefireArgLine} @{additionalRuntimeArgLine}</argLine>
+          <argLine>@{surefireArgLine} @{testAdditionalRuntimeArgLine}</argLine>
+          <jvm>${test.jvm.path}</jvm>
         </configuration>
       </plugin>
       <plugin>
@@ -1390,12 +1391,12 @@
   </build>
   <profiles>
     <profile>
-      <id>java10</id>
+      <id>java11</id>
       <activation>
-        <jdk>10</jdk>
+        <jdk>11</jdk>
       </activation>
       <properties>
-        <additionalRuntimeArgLine>--add-modules
+        <testAdditionalRuntimeArgLine>--add-modules
 					java.xml.bind,ALL-MODULE-PATH --add-exports
 					java.base/sun.nio.ch=ALL-UNNAMED --add-exports
 					java.base/jdk.internal.ref=ALL-UNNAMED --add-exports
@@ -1404,13 +1405,39 @@
 					java.xml/com.sun.org.apache.xml.internal.resolver.tools=ALL-UNNAMED
 					--add-opens java.base/java.util=ALL-UNNAMED --add-opens
 					java.base/java.lang=ALL-UNNAMED --add-opens
-					java.base/java.lang.reflect=ALL-UNNAMED</additionalRuntimeArgLine>
+					java.base/java.lang.reflect=ALL-UNNAMED</testAdditionalRuntimeArgLine>
+        <test.jvm.path>/usr/lib/jvm/java-11-oracle/bin/java</test.jvm.path>
         <jdk.src.version>1.8</jdk.src.version>
         <jdk.target.version>1.8</jdk.target.version>
         <jdk.src.exclude>**/module-info.java</jdk.src.exclude>
         <jacoco.version>0.8.0</jacoco.version>
         <compiler.plugin.version>3.7.0</compiler.plugin.version>
-        <surefire.version>2.20.1</surefire.version>
+        <surefire.version>2.21.0</surefire.version>
+      </properties>
+    </profile>
+    <profile>
+      <id>java10</id>
+      <activation>
+        <jdk>10</jdk>
+      </activation>
+      <properties>
+        <testAdditionalRuntimeArgLine>--add-modules
+					java.xml.bind,ALL-MODULE-PATH --add-exports
+					java.base/sun.nio.ch=ALL-UNNAMED --add-exports
+					java.base/jdk.internal.ref=ALL-UNNAMED --add-exports
+					java.xml/com.sun.org.apache.xml.internal.resolver=ALL-UNNAMED
+					--add-exports
+					java.xml/com.sun.org.apache.xml.internal.resolver.tools=ALL-UNNAMED
+					--add-opens java.base/java.util=ALL-UNNAMED --add-opens
+					java.base/java.lang=ALL-UNNAMED --add-opens
+					java.base/java.lang.reflect=ALL-UNNAMED</testAdditionalRuntimeArgLine>
+        <test.jvm.path>/usr/lib/jvm/java-10-oracle/bin/java</test.jvm.path>
+        <jdk.src.version>1.8</jdk.src.version>
+        <jdk.target.version>1.8</jdk.target.version>
+        <jdk.src.exclude>**/module-info.java</jdk.src.exclude>
+        <jacoco.version>0.8.0</jacoco.version>
+        <compiler.plugin.version>3.7.0</compiler.plugin.version>
+        <surefire.version>2.21.0</surefire.version>
       </properties>
     </profile>
     <profile>
@@ -1419,7 +1446,7 @@
         <jdk>9</jdk>
       </activation>
       <properties>
-        <additionalRuntimeArgLine>--add-modules
+        <testAdditionalRuntimeArgLine>--add-modules
 					java.xml.bind,ALL-MODULE-PATH --add-exports
 					java.base/sun.nio.ch=ALL-UNNAMED --add-exports
 					java.base/jdk.internal.ref=ALL-UNNAMED --add-exports
@@ -1428,13 +1455,14 @@
 					java.xml/com.sun.org.apache.xml.internal.resolver.tools=ALL-UNNAMED
 					--add-opens java.base/java.util=ALL-UNNAMED --add-opens
 					java.base/java.lang=ALL-UNNAMED --add-opens
-					java.base/java.lang.reflect=ALL-UNNAMED</additionalRuntimeArgLine>
+					java.base/java.lang.reflect=ALL-UNNAMED</testAdditionalRuntimeArgLine>
+        <test.jvm.path>/usr/lib/jvm/java-9-oracle/bin/java</test.jvm.path>
         <jdk.src.version>1.8</jdk.src.version>
         <jdk.target.version>1.8</jdk.target.version>
         <jdk.src.exclude>**/module-info.java</jdk.src.exclude>
         <jacoco.version>0.8.0</jacoco.version>
         <compiler.plugin.version>3.7.0</compiler.plugin.version>
-        <surefire.version>2.20.1</surefire.version>
+        <surefire.version>2.21.0</surefire.version>
       </properties>
     </profile>
     <profile>
@@ -1443,13 +1471,23 @@
         <jdk>1.8</jdk>
       </activation>
       <properties>
-        <additionalRuntimeArgLine></additionalRuntimeArgLine>
+        <testAdditionalRuntimeArgLine>--add-modules
+					java.xml.bind,ALL-MODULE-PATH --add-exports
+					java.base/sun.nio.ch=ALL-UNNAMED --add-exports
+					java.base/jdk.internal.ref=ALL-UNNAMED --add-exports
+					java.xml/com.sun.org.apache.xml.internal.resolver=ALL-UNNAMED
+					--add-exports
+					java.xml/com.sun.org.apache.xml.internal.resolver.tools=ALL-UNNAMED
+					--add-opens java.base/java.util=ALL-UNNAMED --add-opens
+					java.base/java.lang=ALL-UNNAMED --add-opens
+					java.base/java.lang.reflect=ALL-UNNAMED</testAdditionalRuntimeArgLine>
+        <test.jvm.path>/usr/lib/jvm/java-9-oracle/bin/java</test.jvm.path>
         <jdk.src.version>1.8</jdk.src.version>
         <jdk.target.version>1.8</jdk.target.version>
         <jdk.src.exclude>**/module-info.java</jdk.src.exclude>
         <jacoco.version>0.8.0</jacoco.version>
         <compiler.plugin.version>3.7.0</compiler.plugin.version>
-        <surefire.version>2.20.1</surefire.version>
+        <surefire.version>2.21.0</surefire.version>
       </properties>
     </profile>
     <profile>
@@ -1839,11 +1877,9 @@
               <keywords>true</keywords>
               <additionalOptions>
                 <additionalOption>-sourceclasspath ${project.build.outputDirectory}</additionalOption>
-                <additionalOption>${additionalRuntimeArgLine}</additionalOption>
+                <additionalOption>${testAdditionalRuntimeArgLine}</additionalOption>
               </additionalOptions>
             </configuration>
-            <!-- <reportSets> <reportSet> <id>non-aggregate</id> <reports> <report>javadoc</report> 
-							</reports> <configuration></configuration> </reportSet> </reportSets> -->
           </plugin>
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
@@ -1887,9 +1923,6 @@
             </reportSets>
             <inherited>true</inherited>
           </plugin>
-          <!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-jxr-plugin</artifactId> 
-						<version>2.2</version> <configuration> <aggregate>true</aggregate> <linkJavadoc>true</linkJavadoc> 
-						<javadocDir>target/site/apidocs</javadocDir> </configuration> </plugin> -->
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-jxr-plugin</artifactId>
@@ -1953,8 +1986,6 @@
             <configuration>
               <excludeProperties>cia.project.versions.spring,cia.project.versions.spring.security,cia.project.versions.slf4j,cia.project.versions.guava,cia.project.versions.junit.dep,cia.project.versions.aspectj,cia.project.versions.slf4j,cia.project.versions.commons.lang,cia.project.versions.jaxb2.commons</excludeProperties>
               <properties>
-                <!-- <property> <name>cia.project.versions.spring</name> <banSnapshots>true</banSnapshots> 
-									</property> -->
                 <property>
                   <name>cia.project.versions.spring.security</name>
                   <banSnapshots>true</banSnapshots>
@@ -1967,8 +1998,6 @@
                   <name>cia.project.versions.javassist</name>
                   <banSnapshots>true</banSnapshots>
                 </property>
-                <!-- <property> <name>cia.project.versions.asm</name> <banSnapshots>true</banSnapshots> 
-									</property> -->
                 <property>
                   <name>cia.project.versions.cglib</name>
                   <banSnapshots>true</banSnapshots>
@@ -2067,8 +2096,6 @@
             <configuration>
               <excludeProperties>cia.project.versions.spring,cia.project.versions.slf4j,cia.project.versions.guava</excludeProperties>
               <properties>
-                <!-- <property> <name>cia.project.versions.spring</name> <banSnapshots>false</banSnapshots> 
-									</property> -->
                 <property>
                   <name>cia.project.versions.spring.security</name>
                   <banSnapshots>false</banSnapshots>
@@ -2081,8 +2108,6 @@
                   <name>cia.project.versions.javassist</name>
                   <banSnapshots>false</banSnapshots>
                 </property>
-                <!-- <property> <name>cia.project.versions.asm</name> <banSnapshots>false</banSnapshots> 
-									</property> -->
                 <property>
                   <name>cia.project.versions.cglib</name>
                   <banSnapshots>false</banSnapshots>
